--- a/src/Components/Pagination/Pagination.css
+++ b/src/Components/Pagination/Pagination.css
@@ -6,6 +6,8 @@
   align-self: center;
   list-style: none;
   position: fixed;
+  font-family: "Space Grotesk", regular;
+
   width: 100vw;
   text-align: center;
 }
@@ -21,18 +23,18 @@
   align-self: center;
   margin: auto;
   text-align: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: "Space Grotesk", regular;
 }
 
 .paginationText:hover {
   cursor: pointer;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: "Space Grotesk", regular;
 }
 
 .paginationNum {
   margin: 10px;
   padding-bottom: 40px;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: "Space Grotesk", regular;
   list-style: none;
   text-align: center;
 }
@@ -40,12 +42,13 @@
 .paginationText {
   text-align: center;
   display: flex;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: "Space Grotesk", regular;
   font-weight: bold;
   padding-left: 0 !important;
   width: 3rem;
   justify-content: center;
   align-items: center;
+  margin-top: 0;
   list-style: none;
 }
 
