--- a/src/Components/SixToNine/SixToNine.css
+++ b/src/Components/SixToNine/SixToNine.css
@@ -3,13 +3,11 @@
   align-self: center;
   justify-content: center;
   margin-top: 1vh;
-  font-size: larger;
-  font-weight: bold;
+  /* font-size: larger; */
+  /* font-weight: bold; */
   z-index: 9;
-  /* font-family: "Mona-Sans Regular", sans-serif; */
-  font-family: "Space Grotesk", regular;
-
   margin-bottom: 10px;
+  font-family: "Space Grotesk", regular;
 }
 
 .magnifyingGlass {
