--- a/src/Components/Index/Index.css
+++ b/src/Components/Index/Index.css
@@ -1,17 +1,26 @@
 table {
-  font-family: "Mona-Sans Regular", sans-serif;
-  /* height: 70%; */
+  font-family: "Space Grotesk", regular;
   border-collapse: collapse;
-  /* width: 80%; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: auto;
+  margin-top: 0;
+}
+
+.ageRange {
+  font-family: "Space Grotesk", regular;
+}
+
+.indexH2 {
+  margin-top: 0;
+  font-family: "Space Grotesk", regular;
 }
 
 .indexContainer {
-  margin-top: 2rem;
   display: flex;
+  font-family: "Space Grotesk", regular;
+
   flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
@@ -27,9 +36,7 @@ table {
 }
 th {
   text-align: left;
-
   padding: 10px;
-  /* width: 20vw; */
 }
 td {
   text-align: left;
