--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,28 @@
   font-family: "Mona Sans", sans-serif;
 }
 
+.navLeft {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 3vh;
+}
+
+.categoryBut {
+  height: 3.5vh;
+  width: 3vw;
+  margin: 5px;
+  color: #000;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.categoryBut:hover {
+  cursor: pointer;
+}
+
 .navdiv2 {
   display: flex;
   flex-direction: row;
@@ -166,6 +188,7 @@
 
 .notesH2 {
   font-weight: bold;
+  color: #fff;
   /* padding-left: 10px; */
   font-family: "Space Grotesk", regular;
   font-size: xx-large;
@@ -241,6 +264,9 @@
   }
 
   .translateImg {
+    width: 40px;
+  }
+  .categoryBut {
     width: 40px;
   }
 }
