--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,16 +7,17 @@
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   z-index: 9;
-  font-family: "Mona Sans", sans-serif;
+  font-family: "Space Grotesk", regular;
 }
 
 .navLeft {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   align-content: center;
   height: 3vh;
+  width: 25%;
 }
 
 .categoryBut {
@@ -40,7 +41,7 @@
   justify-content: center;
   margin: auto;
   z-index: 9;
-  font-family: "Mona Sans", sans-serif;
+  font-family: "Space Grotesk", regular;
 }
 
 .modal {
@@ -148,11 +149,9 @@
 
 .burger {
   margin: 20px;
-  /* margin-left: 40px; */
 }
 .hoverNav {
   display: flex;
-  /* margin: auto; */
 }
 
 .menus {
