--- a/src/Components/AnimCard/AnimCard.css
+++ b/src/Components/AnimCard/AnimCard.css
@@ -31,6 +31,14 @@
   margin: auto;
   border-radius: 15px;
 }
+.animVideoIframe {
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+}
 
 .personNameAnimCard {
   width: auto;
