--- a/src/Components/Info/Info.css
+++ b/src/Components/Info/Info.css
@@ -7,9 +7,9 @@
 
 .infoH1 {
   margin-top: 0;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .infoP {
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 }
