--- a/src/Components/SixToNine/SixToNine.css
+++ b/src/Components/SixToNine/SixToNine.css
@@ -5,7 +5,7 @@
   margin-top: 1vh;
   z-index: 9;
   margin-bottom: 10px;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .magnifyingGlass {
