--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   z-index: 9;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .navLeft {
@@ -45,7 +45,8 @@
   justify-content: center;
   align-items: center;
   background-color: #258ea6;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
+
   padding: 2px;
 }
 
@@ -65,18 +66,19 @@
   justify-content: center;
   margin: auto;
   z-index: 9;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .modal {
   position: fixed; /* Stay in place */
-  z-index: 1121212121211212312312312312312312121; /* Sit on top */
+  z-index: 999999; /* Sit on top */
 
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: hidden; /* Enable scroll if needed */
+  font-family: "Space Grotesk", sans-serif;
 
   display: flex;
   flex-direction: column;
@@ -94,9 +96,12 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: hidden; /* Enable scroll if needed */
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .modalShow {
+  font-family: "Mona-Sans Regular", sans-serif;
+
   display: none;
   position: fixed; /* Stay in place */
   z-index: 123123123123121232192394923949239410101010010101010; /* Sit on top */
@@ -123,7 +128,7 @@
   width: 30%;
   height: 100vh;
   background-color: #258ea6;
-
+  position: relative;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -131,9 +136,8 @@
   border-top-left-radius: 45px;
   border-bottom-left-radius: 45px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 100px; */
-  z-index: 1121212121211212312312312312312312121; /* Sit on top */
+  z-index: 999999;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .innerText {
@@ -150,7 +154,7 @@
 }
 
 .innerTextInfo {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Space Grotesk", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -185,7 +189,7 @@
   align-items: center;
   padding-right: 20px;
   justify-content: flex-end;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: "Space Grotesk", sans-serif;
   font-weight: bold;
 }
 
@@ -199,7 +203,7 @@
   align-self: baseline;
   margin: auto;
   font-size: small;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .hoverNavCym {
@@ -213,7 +217,7 @@
   font-weight: bold;
   color: #fff;
   /* padding-left: 10px; */
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
   font-size: xx-large;
   margin-bottom: 10px;
   margin-top: 10px;
