--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -53,7 +53,7 @@
 
 .personName {
   font-weight: bold;
-  font-family: "Space Grotesk", regular;
+  font-family: "Space Grotesk", sans-serif;
 
   font-size: x-large !important;
 }
@@ -214,6 +214,84 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .personInfo {
+    display: flex;
+    flex-direction: column;
+    height: auto !important;
+    width: 100vw;
+    padding: 0 !important;
+    box-shadow: none;
+  }
+  .personText {
+    padding: 0rem !important;
+    margin-right: 20px !important;
+    width: 100vw;
+    list-style: none !important;
+    display: flex;
+    list-style-type: none !important;
+  }
+
+  .personText ul {
+    list-style: none;
+    padding: 10px;
+  }
+  .personBox {
+    justify-content: space-between;
+    margin-top: 1vh;
+    list-style: none !important;
+    list-style-type: none !important;
+    height: auto !important;
+    background: none;
+    border: none;
+    display: flex;
+    width: 100%;
+  }
+  .leftSide {
+    width: 100%;
+    list-style: none !important;
+  }
+
+  .imgBox {
+    width: 50vw !important;
+  }
+  .prevnext {
+    display: none;
+  }
+
+  .personName {
+    text-align: center;
+  }
+  .personImg {
+    width: 100%;
+    height: 20vh;
+  }
+  .rightSide {
+    overflow: visible;
+    list-style: none !important;
+  }
+  .wholePage {
+    margin-top: 0;
+    margin: 0 !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    list-style: none !important;
+  }
+
+  .flipMobile {
+    display: flex;
+  }
+
+  .flipImg {
+    transform: scale(2);
+  }
+  .personShortSlug {
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 800px) {
   .personInfo {
     display: flex;
     flex-direction: column;
