--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -148,6 +148,31 @@
   justify-content: center;
   align-items: center;
 }
+
+.youtubeEmbed {
+  display: flex;
+  justify-content: center;
+  border-radius: 7px;
+  object-fit: contain;
+  /* border: 1px solid black; */
+  height: 100%;
+  width: 100%;
+}
+
+.backLVid {
+  margin: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  flex-direction: column;
+  border-radius: 15px;
+  padding: 10px;
+  height: 50%;
+  width: 80%;
+  font-family: "Mona-Sans Regular", sans-serif;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .backRight {
   width: 50%;
   height: 100%;
@@ -159,6 +184,11 @@
   font-size: large;
   text-align: flex-start;
   border-radius: 15px;
+  padding: 10px;
+}
+
+.backRightP {
+  margin-left: 1rem;
 }
 .resourceLi {
   padding: 10px;
@@ -288,6 +318,12 @@
   }
   .personShortSlug {
     height: auto;
+  }
+}
+
+@media only screen and (max-width: 1215px) {
+  .personH2 {
+    font-size: x-large;
   }
 }
 
