--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -1,6 +1,5 @@
 .personH2Quiz {
-  margin: 10px;
-  margin-left: 2vw;
+  text-align: center;
 }
 
 .score-section {
@@ -15,4 +14,79 @@
 
 .question-count {
   font-weight: bold;
+}
+
+.questions {
+  height: 75%;
+  text-align: center;
+}
+
+.answerBoxes {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  justify-self: center;
+}
+
+.boxes {
+  height: 80%;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  justify-self: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.answers {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 20px;
+  height: 10vh;
+  width: 30vw;
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.answers:hover {
+  cursor: pointer;
+}
+
+.nextBut {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 20px;
+  height: 100%;
+  width: 20%;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.finishedBut {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 20px;
+  height: 30px;
+  width: 20%;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.finishedQuiz {
+  margin-bottom: 20px;
+}
+
+.nextArea {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 20%;
 }
