--- a/src/Components/DiaryBox/DiaryBox.css
+++ b/src/Components/DiaryBox/DiaryBox.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   align-content: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .DiaryFlipBook {
@@ -20,6 +20,10 @@
   background-color: rgb(252, 247, 240);
   overflow: hidden;
   padding: 10px;
+}
+
+.diaryLOs {
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .DiaryFlipBookLeft {
