--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -31,7 +31,7 @@
 
 .personInfoBack {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: white;
   font-family: "Mona-Sans Regular", sans-serif;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -59,6 +59,7 @@
 }
 .rightSide {
   overflow: scroll;
+
   height: 90%;
   margin: 10px;
   width: 42vw;
@@ -73,6 +74,7 @@
 }
 .personText {
   display: flex;
+  flex-direction: column;
   font-family: "Mona-Sans Regular", sans-serif;
 }
 
@@ -108,6 +110,28 @@
   border-radius: 15px;
 }
 
+.backLeftYTVid {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-family: "Mona-Sans Regular", sans-serif;
+  flex-direction: column;
+  border-radius: 15px;
+}
+
+.backLeft {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mona-Sans Regular", sans-serif;
+  flex-direction: column;
+  border-radius: 15px;
+}
+
 .quizButton {
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -121,12 +145,33 @@
   align-items: center;
   background-color: #258ea6;
   color: #f2f2f2;
+  text-decoration: none;
+}
+
+.showQuizBut {
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  width: 10vw;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  text-align: center;
+  align-items: center;
+  background-color: #258ea6;
+  color: #f2f2f2;
+  text-decoration: none;
+}
+
+.dontShowQuizBut {
+  display: none;
 }
 
 .quizButton:hover {
   cursor: pointer;
   background-color: #fff;
-  color: #258ea6;
+  color: #258ea6 !important;
 }
 
 .quizH2 {
@@ -140,12 +185,12 @@
   flex-direction: column;
   border-radius: 15px;
   padding: 10px;
-  height: 50%;
+  height: 60%;
   width: 80%;
   font-family: "Mona-Sans Regular", sans-serif;
   text-align: center;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -165,8 +210,8 @@
   flex-direction: column;
   border-radius: 15px;
   padding: 10px;
-  height: 50%;
-  width: 80%;
+  height: 100%;
+  width: 90%;
   font-family: "Mona-Sans Regular", sans-serif;
   text-align: center;
   display: flex;
@@ -175,7 +220,7 @@
 }
 .backRight {
   width: 50%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -184,16 +229,17 @@
   font-size: large;
   text-align: flex-start;
   border-radius: 15px;
-  padding: 10px;
 }
 
 .backRightP {
   margin-left: 1rem;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 .resourceLi {
   padding: 10px;
   list-style: none;
   font-size: smaller;
+  font-family: "Mona-Sans Regular", sans-serif;
 }
 
 .resourceHref {
