--- a/src/Components/Diaries/Diaries.css
+++ b/src/Components/Diaries/Diaries.css
@@ -9,9 +9,9 @@
 
 .infoH1Diaries {
   margin-top: 0;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: grotesk;
 }
 
 .infoPDiaries {
-  font-family: "Space Grotesk", sans-serif;
+  font-family: grotesk;
 }
