--- a/src/Components/Notes/Notes.css
+++ b/src/Components/Notes/Notes.css
@@ -1,5 +1,5 @@
 .notesH1 {
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   margin-top: 0;
 }
 
@@ -13,6 +13,6 @@
 }
 
 .notesP {
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   width: 50%;
 }
