--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -1,14 +1,14 @@
 .storyBox {
   background-color: #fff;
   border-radius: 5px;
-  height: 45vh;
+  height: 35vh;
   padding: 1px;
   width: 20vw;
   margin: 1.5vw;
   margin-top: 1.5vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 
 .storyBoxAnim {
@@ -43,7 +43,7 @@
   font-weight: bold;
   text-align: center;
 
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
 }
 .indivNameAnim {
   margin-top: 0.5rem !important;
@@ -95,19 +95,19 @@
 }
 
 .indivSlug {
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   grid-area: content-3;
   margin-left: 0.5rem;
   margin-right: 1rem;
   width: 10vw;
-  height: 14vh;
+  height: 10vh;
   margin-top: 30px;
   overflow: scroll;
 }
 
 .bottomDesc {
   margin: 1rem;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -128,9 +128,40 @@
     display: none;
   }
 }
+
+@media only screen and (max-width: 1150px) {
+  .storyBox {
+    height: 40vh;
+  }
+}
 @media only screen and (max-width: 600px) {
   .storyBox {
-    height: 40vh !important;
+    height: 70vh !important;
+    /* background-color: black; */
+    padding: 1px;
+    /* width: 70vw !important; */
+  }
+}
+@media only screen and (max-height: 450px) {
+  .storyBox {
+    height: 45vh !important;
+    /* background-color: black; */
+    padding: 1px;
+    /* width: 70vw !important; */
+  }
+}
+
+@media only screen and (max-height: 400px) {
+  .storyBox {
+    height: 55vh !important;
+    padding: 1px;
+    /* width: 70vw !important; */
+  }
+}
+
+@media only screen and (max-width: 615px) {
+  .storyBox {
+    height: 45vh !important;
     padding: 1px;
     width: 70vw !important;
   }
