--- a/src/Components/AnimCard/AnimCard.css
+++ b/src/Components/AnimCard/AnimCard.css
@@ -10,6 +10,7 @@
 .personInfoAnimCard {
   background-color: white;
   padding: 10px;
+  padding-top: 0px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 15px !important;
   width: 75vw;
@@ -18,9 +19,27 @@
   align-items: center;
   font-size: large;
   justify-items: center;
-  /* font-family: "Mona-Sans Regular", sans-serif;
-   */
 }
+
+.youtubeImgOverlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  align-items: center;
+  margin: auto;
+  z-index: 1000000000000;
+  object-fit: cover;
+  width: 35%;
+  height: 50%;
+  background-color: #258ea6;
+  color: white;
+}
+
+.youtubeImgOverlay:hover {
+  cursor: pointer;
+}
+
 .animCardVideo {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: flex;
@@ -37,6 +56,7 @@
   width: auto;
   margin-top: 0 !important;
   padding-top: 0 !important;
+  margin-block-start: 0px !important;
 }
 .animVideoIframe {
   position: relative;
@@ -67,7 +87,7 @@
   align-items: center;
   width: 100%;
   /* font-family: "Mona-Sans Regular", sans-serif; */
-  font-family: "Space Grotesk", sans-serif;
+  font-family: grotesk;
 }
 
 @media only screen and (max-width: 600px) {
