--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -5,8 +5,16 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   font-weight: light;
+}
+
+.colourCategoryP {
+  color: black;
+}
+
+.colourCategoryH3 {
+  color: black;
 }
 
 .ageGroupIndivCat {
@@ -20,7 +28,7 @@
   width: 20vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
 }
 
 .ageGroupIndivCat:hover {
@@ -28,7 +36,7 @@
 }
 
 .categoriesH1 {
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   margin-top: 0;
 }
 
@@ -40,7 +48,7 @@
   display: flex;
   justify-content: center;
   position: relative;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
 }
 
 @media only screen and (max-width: 600px) {
