--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,12 +2,12 @@
   z-index: 9;
   text-align: center;
   align-items: center;
-  margin-top: 5vh;
   display: flex;
   justify-content: center;
   position: relative;
   font-size: large;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
+  margin-bottom: 2vh;
 }
 
 .ageTextBegin {
@@ -19,7 +19,7 @@
   position: relative;
   justify-content: center;
   font-size: large;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   border-radius: 5px;
   width: 10vw;
   height: 7vh;
@@ -64,7 +64,7 @@
 .introText {
   font-size: medium;
   margin-top: 0;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   list-style: none;
   text-align: left;
   align-items: center;
@@ -74,12 +74,11 @@
 }
 .introDiv {
   display: flex;
-  font-family: "Mona Sans", sans-serif;
+  font-family: sassoon;
   text-align: center;
   align-items: center;
   align-self: center;
-  align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 90%;
   margin: auto;
   flex-direction: row;
@@ -102,7 +101,7 @@
   width: 35%;
   height: 100%;
   display: flex;
-  font-family: "Mona Sans", sans-serif;
+  font-family: sassoon;
   text-align: center;
   align-items: center;
   align-self: center;
@@ -130,7 +129,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
   margin-bottom: 5vh;
   font-weight: light;
   padding-bottom: 5vh;
@@ -151,7 +150,7 @@
   margin-top: 1.5vw;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
 }
 
 .ageGroupIndivBlocked {
@@ -164,7 +163,7 @@
   justify-content: center;
   align-items: center;
   font-size: x-large;
-  font-family: "Mona-Sans Black";
+  font-family: sassoon;
 
   z-index: 9;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
