--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -5,11 +5,68 @@
   flex-direction: column;
   align-items: center;
   width: 80vw;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
+}
+
+.resourceBanner {
+  position: fixed;
+  /* width: 5%; */
+  border-radius: 5px;
+  margin: 20px;
+  padding: 5px;
+  height: 2vh;
+  background-color: white;
+}
+
+.scroll {
+  position: s;
+}
+
+.podcastImgOverlay:hover {
+  cursor: pointer;
+}
+
+.podcastImgOverlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  align-items: center;
+  margin: auto;
+  z-index: 1000000000000;
+  object-fit: cover;
+  width: 35%;
+  height: 50%;
+  /* background-color: black; */
+  background-image: url("https://dev.addysgop.co.uk/pdfs/theo.jpg");
+  background-size: cover;
+  color: white;
+}
+
+.podcastImgOverlay2:hover {
+  cursor: pointer;
+}
+
+.podcastImgOverlay2 {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  align-items: center;
+  margin: auto;
+  z-index: 1000000000000;
+  object-fit: cover;
+  width: 35%;
+  height: 50%;
+  /* background-color: black; */
+  background-image: url("https://www.peoplescollection.wales/sites/default/files/images/2018/September/robeson_1.png?itok=v-6_LZ4A");
+  background-size: cover;
+  color: white;
 }
 
 .personH2 {
   margin: 0;
+  font-family: sassoon;
 }
 .imgBox {
   display: flex;
@@ -25,7 +82,7 @@
   align-items: center;
   font-size: large;
   justify-items: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -33,54 +90,69 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 10px;
   width: 75vw;
   height: 75vh !important;
   z-index: 9;
-  align-items: center;
+  align-items: flex-start;
   padding: 10px;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   justify-items: center;
 }
 
 .flipMobile {
   display: none;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 
 .personName {
   font-weight: bold;
-  font-family: "Space Grotesk", sans-serif;
-
+  font-family: sassoon;
   font-size: x-large !important;
 }
 .rightSide {
   overflow: scroll;
-
   height: 90%;
   margin: 10px;
   width: 42vw;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.rightSide::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+.rightSide::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f5f5f5;
+}
+
+.rightSide::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #258ea6;
 }
 
 .leftSide {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 .personText {
   display: flex;
   flex-direction: column;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 
 .personText li {
   padding: 0.5rem;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 
 .wholePage {
@@ -105,31 +177,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   flex-direction: column;
   border-radius: 15px;
 }
 
 .backLeftYTVid {
   width: 50%;
-  height: 100%;
+  height: 60%;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  font-family: "Mona-Sans Regular", sans-serif;
+  justify-content: flex-start;
+  align-items: center;
+  font-family: sassoon;
   flex-direction: column;
   border-radius: 15px;
 }
 
 .backLeft {
   width: 50%;
-  height: 100%;
+  height: 50%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Mona-Sans Regular", sans-serif;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-family: sassoon;
   flex-direction: column;
   border-radius: 15px;
+  overflow: hidden;
 }
 
 .quizButton {
@@ -146,6 +219,16 @@
   background-color: #258ea6;
   color: #f2f2f2;
   text-decoration: none;
+}
+
+.courtesyText {
+  margin: 0;
+  padding-top: 5px;
+  color: darkgrey;
+}
+
+.resourceLi {
+  height: auto;
 }
 
 .showQuizBut {
@@ -185,13 +268,14 @@
   flex-direction: column;
   border-radius: 15px;
   padding: 10px;
-  height: 60%;
+  height: 100%;
   width: 80%;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   text-align: center;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .youtubeEmbed {
@@ -210,9 +294,9 @@
   flex-direction: column;
   border-radius: 15px;
   padding: 10px;
-  height: 100%;
+  height: 80%;
   width: 90%;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -225,7 +309,7 @@
   justify-content: flex-start;
   flex-direction: column;
   font-weight: bold;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
   font-size: large;
   text-align: flex-start;
   border-radius: 15px;
@@ -233,13 +317,13 @@
 
 .backRightP {
   margin-left: 1rem;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 .resourceLi {
   padding: 10px;
   list-style: none;
   font-size: smaller;
-  font-family: "Mona-Sans Regular", sans-serif;
+  font-family: sassoon;
 }
 
 .resourceHref {
