--- a/src/Components/Resources/Resources.css
+++ b/src/Components/Resources/Resources.css
@@ -9,8 +9,7 @@
   align-self: center;
   align-items: center;
   margin: auto;
-  font-family: "Space Grotesk", sans-serif;
-
+  font-family: sassoon;
   width: 80%;
 }
 
@@ -21,7 +20,7 @@ h2 {
   align-self: center;
   align-items: center;
   margin-bottom: 0px;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
 }
 
 .resourceP {
@@ -58,5 +57,5 @@ h2 {
 }
 .caption {
   font-size: small;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: sassoon;
 }
