--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -14,7 +14,6 @@
   z-index: 9;
   text-align: center;
   align-items: center;
-  margin-top: 2vh;
   display: flex;
   position: relative;
   justify-content: center;
@@ -76,36 +75,38 @@
   display: flex;
   font-family: sassoon;
   text-align: center;
-  align-items: center;
+  /* align-items: center; */
   align-self: center;
   justify-content: space-between;
   width: 90%;
   margin: auto;
+  margin-top: 30px;
   flex-direction: row;
 }
 
 .introDivL {
   width: 55%;
+  display: flex;
   height: 100%;
 }
 
 .introDivImg {
   object-fit: contain;
-  margin-top: 5rem;
-  transform: scale(1.2);
+  transform: scale(0.9);
   width: 100%;
-  height: 100%;
+  /* height: 90%; */
 }
 
 .introDivR {
   width: 35%;
-  height: 100%;
+  height: 600px;
+  margin-top: 1rem;
+
   display: flex;
   font-family: sassoon;
   text-align: center;
   align-items: center;
   align-self: center;
-  align-items: center;
   justify-content: center;
 }
 .testSize {
