--- a/src/Components/Diaries/Diaries.css
+++ b/src/Components/Diaries/Diaries.css
@@ -9,9 +9,5 @@
 
 .infoH1Diaries {
   margin-top: 0;
-  font-family: grotesk;
-}
-
-.infoPDiaries {
-  font-family: grotesk;
+  /* font-family: grotesk; */
 }
