--- a/src/Components/DiaryBox/DiaryBox.css
+++ b/src/Components/DiaryBox/DiaryBox.css
@@ -7,8 +7,6 @@
 }
 
 .DiaryFlipBook {
-  /* border: 1px solid black; */
-
   width: 75vw;
   height: 75vh;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -27,21 +25,14 @@
   transform: scale(0.8);
 }
 
-.diaryLOs {
-  font-family: grotesk;
-}
-
 .DiaryFlipBookLeft {
   height: 100%;
   width: 50%;
-  /* border: 1px solid black; */
 }
 
 .DiaryFlipBookLeftAS {
   height: 100%;
   width: 50%;
-  /* display: flex; */
-  /* border: 1px solid black; */
 }
 
 .ASdiv {
@@ -59,14 +50,12 @@
   width: 1px;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.35);
-  /* border: 1px solid black; */
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .DiaryFlipBookRight {
   height: 100%;
   width: 50%;
-  /* border: 1px solid black; */
 }
 
 .DiaryPrevPage {
@@ -79,7 +68,6 @@
   align-content: center;
   text-align: center;
   align-items: center;
-  /* border: 1px solid black; */
 }
 
 .DiaryText {
@@ -93,11 +81,10 @@
   color: black;
   display: flex;
 }
-.LOs {
-  font-family: grotesk;
-}
+
 .handwritten {
   font-family: "Chalkduster", sans-serif;
+  margin-top: 0;
 }
 
 .button:hover {
