--- a/src/Components/SixToNine/SixToNine.css
+++ b/src/Components/SixToNine/SixToNine.css
@@ -54,6 +54,16 @@
   z-index: 9;
   overflow: scroll;
 }
+.storiesContainerAnim {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+  overflow: scroll;
+}
 .ulSearch {
   display: flex;
   flex-direction: row;
@@ -66,6 +76,20 @@
   z-index: 9;
   overflow: scroll;
   width: 100%;
+  font-family: "Mona-Sans Regular", sans-serif;
+}
+.ulSearchAnim {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+  overflow: scroll;
+  width: 75%;
   font-family: "Mona-Sans Regular", sans-serif;
 }
 
