--- a/src/Components/StoryBox/StoryBox.css
+++ b/src/Components/StoryBox/StoryBox.css
@@ -32,7 +32,8 @@
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
-  border: 0;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .imgAndSlugDiaries {
