--- a/src/Components/DiaryBox/DiaryBox.css
+++ b/src/Components/DiaryBox/DiaryBox.css
@@ -70,8 +70,13 @@
   align-items: center;
 }
 
+.pAshley {
+  line-height: 1.7;
+}
+
 .DiaryText {
   padding: 20px;
+  padding-top: 10px;
   font-family: "Chalkduster", sans-serif;
   line-height: 35px;
 }
@@ -85,8 +90,14 @@
 .handwritten {
   font-family: "Chalkduster", sans-serif;
   margin-top: 0;
+  font-size: medium;
 }
 
 .button:hover {
   cursor: pointer;
+}
+
+.LOsSC {
+  text-align: left;
+  align-items: flex-start;
 }
